#2 issue & #3 is completed by making the gap bigger and adding another mediaquery

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ h2 {
 
 .flex {
   display: flex;
-  gap: 10px;
+  gap: 20px;
 }
 
 .main img {
